HotelCard Gallery 80%. Displays popup list. Needed correct image name parsing attach.

--- a/Locales/ru/hotelcard.html
+++ b/Locales/ru/hotelcard.html
@@ -122,8 +122,8 @@
 		<div class="gallery">
             {{#Photos}}
                 {{#photoList}}
-                    <a href="files/hotels/2/1.jpg" rel="files/hotels/2/1.jpg" class="nou current">
-                        <img src="files/hotels/2/tn/1.jpg" />
+                    <a href="{{large}}" rel="{{large}}" class="nou">
+                        <img src="files/hotels/2/tn/{{hcPhotoId}}.jpg" />
                     </a>
                 {{/photoList}}
 			{{/Photos}}
