--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -71,12 +70,14 @@
 <script type="text/javascript" src="/scripts/debug/xcommon.js"></script>
 <script type="text/javascript" src="/scripts/models.js"></script>
 
-
+<!--<script src="http://maps.google.com/maps/api/js?sensor=false&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRlrZjuTPwvKSUZIF0_dsu12LmfuBQXsvcXvfazwWVzCQlwG4CP2O6mBQ" type="text/javascript"></script>-->
+-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRIrSlBPavw7Ifq7KLBpU4q9tB4eBSDxh9Cn5W60dBeurP_D8-QpTvthg" type="text/javascript"></script>
 <script type="text/javascript">
     (function(defLanguage) {
         var layoutTypes={INIT:0,SEARCH:1,PROFILE:2,HOTELCARD:3};
-        var xGallery;
+        var xGallery, xMapa;
 
+        //function
         var setSearchParameters=function(searchType){
             var cityId=getCriteriaValue("cityId");
             if(cityId<=0){
@@ -737,12 +738,14 @@
                     el:$('#hotel_info_holder'),
                     render:function(){
                         var self=this;
+
                         getTemplate("hotelcard_tmpl");
                         if(self.el!==undefined && self.el.length<1){
                             self.el=$('#hotel_info_holder');
                         }
                         getTemplate("ro_item_tmpl");
                         getTemplate("gallery_tmpl");
+                        getTemplate("mapa_tmpl");
                         getTemplate("hc_contacts_tmpl",true);
                         getTemplate("dl-item-tmpl",true);
                         getTemplate("ro_ratings_tmpl");
@@ -757,6 +760,7 @@
                             var photosCount = hotelItem.Photos.photoList.length;
                             var roomIterator = 0;
                             var photoIterator=0;
+                            //var geoInfo=getCoordinates();
                             var hi = _.extend(hotelItem, {calc:function() {
                                         return function(text, render) {
                                             var arg = 8;
@@ -799,9 +803,12 @@
                             hotelDiv.append(ich.ro_item_tmpl(hotelItem));
                             ratingsDiv.append(ich.ro_ratings_tmpl(hi));
                             ich.gallery_tmpl(hi).insertAfter(footerDiv);
+                            ich.mapa_tmpl(hotelItem).insertAfter(footerDiv);
+                            GmapInit();
                             $("div.gallery > a.nou:first").addClass("current")
                         });
                         xGallery = new iGallery({id:"#galleryform", btActivator:"#bt_showgallery", btActivatorAlt:"#bt_showgalleryAlt", btAction:"#galleryform a.close"});
+                        xMapa = new iMapa({id:"#mapaform", btActivator:"#bt_showmap", btAction:"#mapaform a.close"});
                         return self;
                     }
                 }
